src/objects/SessionMUser__c.object
<CustomObject>
    <description>This object stores SessionM attributes for customers.</description>
    <fields>
        <fullName>AccountStatus__c</fullName>
        <description>Status of the customer’s account.</description>
        <inlineHelpText>Status of the customer’s account.</inlineHelpText>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>good</fullName>
                </value>
                <value>
                    <fullName>multi</fullName>
                </value>
                <value>
                    <fullName>terminated</fullName>
                </value>
                <value>
                    <fullName>reported</fullName>
                </value>
                <value>
                    <fullName>rev</fullName>
                </value>
                <value>
                    <fullName>tos</fullName>
                </value>
                <value>
                    <fullName>unverified</fullName>
                </value>
                <value>
                    <fullName>vol</fullName>
                </value>
                <value>
                    <fullName>warn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <inlineHelpText>Enrolled Account Name</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent account record.</description>
        <inlineHelpText>Parent account record.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SessionMUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address of the customer</description>
        <inlineHelpText>Address of the customer</inlineHelpText>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailablePoints__c</fullName>
        <description>The points the user has to spend.</description>
        <inlineHelpText>The points the user has to spend.</inlineHelpText>
        <label>Available Points</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City of the customer</description>
        <inlineHelpText>City of the customer</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedAt__c</fullName>
        <description>The date the user account was created.</description>
        <inlineHelpText>The date the user account was created.</inlineHelpText>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrentState__c</fullName>
        <description>The user&apos;s state.</description>
        <inlineHelpText>Current State of the customer</inlineHelpText>
        <label>Current State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomBoolean1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Generic Boolean Field</description>
        <label>Custom Boolean 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomBoolean2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Generic Boolean Field</description>
        <label>Custom Boolean 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomBoolean3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Generic Boolean Field</description>
        <label>Custom Boolean 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomDate1__c</fullName>
        <description>Generic Date Field</description>
        <label>Custom Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomDate2__c</fullName>
        <description>Generic Date Field</description>
        <label>Custom Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomDate3__c</fullName>
        <description>Generic Date Field</description>
        <label>Custom Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomDateTime1__c</fullName>
        <description>Generic DateTime Field</description>
        <label>Custom DateTime 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomDateTime2__c</fullName>
        <description>Generic DateTime Field</description>
        <label>Custom DateTime 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomDateTime3__c</fullName>
        <description>Generic DateTime Field</description>
        <label>Custom DateTime 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomDecimal1__c</fullName>
        <description>Generic Decimal Field</description>
        <label>Custom Decimal 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomDecimal2__c</fullName>
        <description>Generic Decimal Field</description>
        <label>Custom Decimal 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomDecimal3__c</fullName>
        <description>Generic Decimal Field</description>
        <label>Custom Decimal 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomInteger1__c</fullName>
        <description>Generic Integer Field</description>
        <label>Custom Integer 1</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomInteger2__c</fullName>
        <description>Generic Integer Field</description>
        <label>Custom Integer 2</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomInteger3__c</fullName>
        <description>Generic Integer Field</description>
        <label>Custom Integer 3</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomText10__c</fullName>
        <description>Generic Text Field</description>
        <label>Custom Text 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomText11__c</fullName>
        <description>Generic Text Field</description>
        <label>Custom Text 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomText12__c</fullName>
        <description>Generic Text Field</description>
        <label>Custom Text 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerCountry__c</fullName>
        <description>Country of Customer</description>
        <inlineHelpText>Country of the customer</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>ALA</fullName>
                </value>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>ALB</fullName>
                </value>
                <value>
                    <fullName>DZA</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>AGO</fullName>
                </value>
                <value>
                    <fullName>AIA</fullName>
                </value>
                <value>
                    <fullName>ATA</fullName>
                </value>
                <value>
                    <fullName>ATG</fullName>
                </value>
                <value>
                    <fullName>ARG</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>ABW</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>AUT</fullName>
                </value>
                <value>
                    <fullName>AZE</fullName>
                </value>
                <value>
                    <fullName>BHS</fullName>
                </value>
                <value>
                    <fullName>BHR</fullName>
                </value>
                <value>
                    <fullName>BGD</fullName>
                </value>
                <value>
                    <fullName>BRB</fullName>
                </value>
                <value>
                    <fullName>BLR</fullName>
                </value>
                <value>
                    <fullName>BEL</fullName>
                </value>
                <value>
                    <fullName>BLZ</fullName>
                </value>
                <value>
                    <fullName>BEN</fullName>
                </value>
                <value>
                    <fullName>BMU</fullName>
                </value>
                <value>
                    <fullName>BTN</fullName>
                </value>
                <value>
                    <fullName>BOL</fullName>
                </value>
                <value>
                    <fullName>BIH</fullName>
                </value>
                <value>
                    <fullName>BWA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerCurrentCountry__c</fullName>
        <description>Current Country of Customer</description>
        <inlineHelpText>Current Country of the customer</inlineHelpText>
        <label>Current Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>ALA</fullName>
                </value>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>ALB</fullName>
                </value>
                <value>
                    <fullName>DZA</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>AGO</fullName>
                </value>
                <value>
                    <fullName>AIA</fullName>
                </value>
                <value>
                    <fullName>ATA</fullName>
                </value>
                <value>
                    <fullName>ATG</fullName>
                </value>
                <value>
                    <fullName>ARG</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>ABW</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>AUT</fullName>
                </value>
                <value>
                    <fullName>AZE</fullName>
                </value>
                <value>
                    <fullName>BHS</fullName>
                </value>
                <value>
                    <fullName>BHR</fullName>
                </value>
                <value>
                    <fullName>BGD</fullName>
                </value>
                <value>
                    <fullName>BRB</fullName>
                </value>
                <value>
                    <fullName>BLR</fullName>
                </value>
                <value>
                    <fullName>BEL</fullName>
                </value>
                <value>
                    <fullName>BLZ</fullName>
                </value>
                <value>
                    <fullName>BEN</fullName>
                </value>
                <value>
                    <fullName>BMU</fullName>
                </value>
                <value>
                    <fullName>BTN</fullName>
                </value>
                <value>
                    <fullName>BOL</fullName>
                </value>
                <value>
                    <fullName>BIH</fullName>
                </value>
                <value>
                    <fullName>BWA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerGender__c</fullName>
        <description>Gender of the customer</description>
        <inlineHelpText>Gender of the customer</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>f</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <description>Date of Birth of customer</description>
        <inlineHelpText>Date of Birth of the customer</inlineHelpText>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dma__c</fullName>
        <label>Dma</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Customer’s email account.</description>
        <inlineHelpText>Customer’s email account.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalIDType__c</fullName>
        <defaultValue>&apos;Salesforce&apos;</defaultValue>
        <description>Type associated with external identifier.</description>
        <inlineHelpText>Type associated with external identifier.</inlineHelpText>
        <label>External ID Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <description>From Session M perspective it is External Id,  From Salesforce Perspective it is Salesforce Id - which is getting sent to the Session M to create user.</description>
        <externalId>true</externalId>
        <inlineHelpText>From Session M perspective it is External Id,  From Salesforce Perspective it is Salesforce Id - which is getting sent to the Session M to create user.</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>Customer’s first name</description>
        <inlineHelpText>First Name of the customer</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifiers__c</fullName>
        <description>Array of external ID identifiers.</description>
        <inlineHelpText>Array of external ID identifiers.</inlineHelpText>
        <label>Identifiers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Customer’s last name (surname).</description>
        <inlineHelpText>Last Name of the customer</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <defaultValue>&apos;en-us&apos;</defaultValue>
        <description>Customer-preferred locale.</description>
        <inlineHelpText>Customer-preferred locale.</inlineHelpText>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextTierPercentage__c</fullName>
        <description>The user&apos;s next Tier progress percentage.</description>
        <inlineHelpText>The user&apos;s next Tier progress percentage.</inlineHelpText>
        <label>Next Tier Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NextTierPoints__c</fullName>
        <description>The number of points the user needs to reach the next tier.</description>
        <inlineHelpText>The number of points the user needs to reach the next tier.</inlineHelpText>
        <label>Next Tier Points</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OptedIn__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Opted-In for Loyalty Program</description>
        <inlineHelpText>Opted-In for Loyalty Program</inlineHelpText>
        <label>Opted-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProfilePhotoURL__c</fullName>
        <description>The user&apos;s photo URL. Is a description needed here?</description>
        <inlineHelpText>The user&apos;s photo URL. Is a description needed here?</inlineHelpText>
        <label>Profile Photo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegisteredAt__c</fullName>
        <description>Not Needed. Please hide this field.</description>
        <inlineHelpText>Not Needed. Please hide this field.</inlineHelpText>
        <label>Registered At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SessionMID__c</fullName>
        <description>Identifier for customer within SessionM platform</description>
        <inlineHelpText>Identifier for customer within SessionM platform.</inlineHelpText>
        <label>SessionM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionMUserParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SessionM User Parent</description>
        <inlineHelpText>SessionM User Parent</inlineHelpText>
        <label>SessionM User Parent</label>
        <referenceTo>SessionMUser__c</referenceTo>
        <relationshipLabel>SessionM Users</relationshipLabel>
        <relationshipName>SessionM_Users_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State of customer</description>
        <inlineHelpText>State of customer</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the user account active?</description>
        <inlineHelpText>Is the user account active?</inlineHelpText>
        <label>Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TierEndsValue__c</fullName>
        <description>The number of points the user&apos;s current Tier ends at.</description>
        <inlineHelpText>The number of points the user&apos;s current Tier ends at.</inlineHelpText>
        <label>Tier Ends Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierEnteredAt__c</fullName>
        <description>The date the user entered the current Tier.</description>
        <inlineHelpText>The date the user entered the current Tier.</inlineHelpText>
        <label>Tier Entered At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TierStartsValue__c</fullName>
        <description>The number of point the user&apos;s current Tier starts at.</description>
        <inlineHelpText>The number of point the user&apos;s current Tier starts at.</inlineHelpText>
        <label>Tier Starts Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TierSystem__c</fullName>
        <description>The user&apos;s current tier system ID.</description>
        <inlineHelpText>The user&apos;s current tier system ID.</inlineHelpText>
        <label>Tier System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>The user&apos;s current Tier.</description>
        <inlineHelpText>The user&apos;s current Tier.</inlineHelpText>
        <label>Tier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnclaimedAchievementCount__c</fullName>
        <label>Unclaimed Achievement Count</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpdatedAt__c</fullName>
        <description>The date the user account was last updated.</description>
        <inlineHelpText>The date the user account was last updated.</inlineHelpText>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VerificationMethod__c</fullName>
        <description>The method the user verified their account.</description>
        <inlineHelpText>The method by which the customer verified their account.</inlineHelpText>
        <label>Verification Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>Zip Code of the Address</description>
        <inlineHelpText>Zip Code of the Address</inlineHelpText>
        <label>ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SessionM User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SessionM Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>